Fix the word wrapping on response codes

--- a/src/styles/api-reference.css
+++ b/src/styles/api-reference.css
@@ -267,3 +267,7 @@ h6 {
 .api-reference-wrapper {
   margin: -1.5rem calc(-1 * var(--sl-content-pad-x));
 }
+
+span.parameter-item-name {
+  word-wrap: break-word;
+}
